[package]
name = "ulvestein"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.10"
winit = "0.27"
winit_input_helper = "0.13"
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
